--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches-ignore:
       - " ga-ignore-"
+      - "boostrap"
   pull_request:
     branches-ignore:
       - " ga-ignore-"
+      - "boostrap"
 jobs:
   check_coding_style:
     runs-on: ubuntu-latest
