--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,15 +56,12 @@ jobs:
 
       - name: Check file
         run: |
-          IFS=' ' read -r -a files <<< "${vars.EXECUTABLES}"
-          for file in "${files[@]}"; do
-            if [ ! -x "$file" ]; then
-              echo "File $file does not exist or is not executable"
+          for file in ${{ vars.EXECUTABLES }};do
+             if [ ! -x "$file" ]; then
+              echo"File $file does not exist or is not executable"
               exit 1
             fi
           done
-        env:
-          EXECUTABLES: ${{ vars.EXECUTABLES }}
 
   # run_tests:
   #   runs-on: ubuntu-latest
