[UPD] Add server functionality and free resources

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,10 @@
 ## makefile
 ##
 
-SRC			=	display_help.c
+SRC			=	display_help.c \
+				server.c \
+				free.c \
+				socket.c
 
 MAIN_SRC	=	main.c
 
