[UPD] include/ && client/
add a parts of client's commands

--- a/client/Makefile
+++ b/client/Makefile
@@ -8,15 +8,34 @@
 SRC			=	main.c				\
 				check_arguments.c	\
 				display_help.c		\
-				is_good_number.c
+				is_good_number.c	\
+				client_logout.c		\
+				spliter_by_sep.c	\
+				client_connection.c	\
+				user_input_event.c
+
+COMMANDS_SRC	=	list_command.c			\
+					login_command.c			\
+					logout_command.c		\
+					messages_command.c		\
+					send_command.c			\
+					subscribe_command.c		\
+					subscribed_command.c	\
+					unsubscribe_command.c	\
+					user_command.c			\
+					users_command.c
 
 TEST		=	test.c
 
 DIR_SRC		=	$(addprefix src/, $(SRC))
+DIR_COMMANDS =  $(addprefix src/commands/, $(COMMANDS_SRC))
 DIR_TESTS	=	$(addprefix tests/, $(TEST))
 
+
 OBJ_SRC		=	$(DIR_SRC:.c=.o)
-OBJ			=	$(OBJ_SRC)
+COMMANDS_OBJ	 =       $(DIR_COMMANDS:.c=.o)
+
+OBJ			=	$(OBJ_SRC) $(COMMANDS_OBJ)
 
 NAME		=	myteams_cli
 
