[UPD] client/src/client_connection.c
add the correct line for the connection with the server

--- a/client/Makefile
+++ b/client/Makefile
@@ -24,7 +24,8 @@ COMMANDS_SRC	=	list_command.c			\
 					subscribed_command.c	\
 					unsubscribe_command.c	\
 					user_command.c			\
-					users_command.c
+					users_command.c			\
+					use_command.c
 
 TEST		=	test.c
 
