[ADD] check_command function to server code

--- a/server/Makefile
+++ b/server/Makefile
@@ -12,6 +12,7 @@ SRC			=	display_help.c 		\
 				socket.c			\
 				client.c			\
 				accept.c			\
+				command.c			\
 				# ${DIR_TOOLBOX}		\
 				# ${DIR_COMMAND}		\
 
