[UPD] client/src/
change the way we wait for the server's data

--- a/client/Makefile
+++ b/client/Makefile
@@ -13,7 +13,8 @@ SRC			=	main.c					\
 				spliter_by_sep.c		\
 				client_connection.c		\
 				user_input_event.c		\
-				send_client_message.c
+				send_client_message.c	\
+				free_tab.c
 
 COMMANDS_SRC	=	list_command.c			\
 					login_command.c			\
