[UPD] Add save_data and load_data functions to server, only user work atm

--- a/server/Makefile
+++ b/server/Makefile
@@ -13,6 +13,8 @@ SRC			=	display_help.c 		\
 				accept.c			\
 				command.c			\
 				init.c				\
+				save_data.c			\
+				load_data.c			\
 				$(DIR_PARSER)		\
 				${DIR_TOOLBOX}		\
 				${DIR_COMMAND}		\
