--- a/client/Makefile
+++ b/client/Makefile
@@ -5,18 +5,21 @@
 ## makefile
 ##
 
-SRC			=	main.c					\
-				check_arguments.c		\
-				display_help.c			\
-				is_good_number.c		\
-				client_logout.c			\
-				spliter_by_sep.c		\
-				client_connection.c		\
-				user_input_event.c		\
-				send_client_message.c	\
-				free_tab.c				\
-				clean_server_command.c	\
-				tablen.c
+SRC			=	main.c						\
+				check_arguments.c			\
+				display_help.c				\
+				is_good_number.c			\
+				client_logout.c				\
+				spliter_by_sep.c			\
+				client_connection.c			\
+				user_input_event.c			\
+				send_client_message.c		\
+				free_tab.c					\
+				clean_server_command.c		\
+				tablen.c					\
+				free_client_struct.c		\
+				read_server_message.c		\
+				receive_server_message.c
 
 COMMANDS_SRC	=	list_command.c			\
 					login_command.c			\
