--- a/server/Makefile
+++ b/server/Makefile
@@ -43,6 +43,7 @@ SRC_PARSER	=	login.c				\
 COMMAND		=	find_command.c		\
 				login_logout.c		\
 				users_function.c	\
+				send.c				\
 
 MAIN_SRC	=	main.c
 
