[UPD] Add subscribed function to handle subscription status in server commands

--- a/server/Makefile
+++ b/server/Makefile
@@ -53,6 +53,7 @@ COMMAND		=	find_command.c		\
 				create.c			\
 				create_response.c	\
 				unsubscribe.c		\
+				subscribed.c		\
 
 DATABASE	=	load_data.c		\
 				save_data.c		\
