--- a/server/Makefile
+++ b/server/Makefile
@@ -26,7 +26,8 @@ TOOLBOX		=	generate_uuid.c 			\
 				user_is_exist.c				\
 				client_is_connected.c		\
 				tab_append_str_at_end.c		\
-				send_user_not_found.c
+				send_user_not_found.c		\
+				send_team_not_found.c
 
 SRC_PARSER	=	login.c				\
 				logout.c			\
