--- a/server/Makefile
+++ b/server/Makefile
@@ -55,6 +55,7 @@ COMMAND		=	find_command.c		\
 				create_response.c	\
 				unsubscribe.c		\
 				subscribed.c		\
+				help/help.c			\
 
 DATABASE	=	load_data.c		\
 				save_data.c		\
